public/analytics/v0.4/_sources/reference/tmlt/analytics/query_builder/index.rst.txt



********************
query_builder
********************

.. py:module:: tmlt.analytics.query_builder

.. autoapi-nested-parse::

   An API for building differentially private queries from basic operations.

   The QueryBuilder class allows users to construct differentially private queries
   using SQL-like commands. These queries can then be used with
   :class:`~tmlt.analytics.session.Session` to obtain results or construct views on
   which further queries can be run.

   The QueryBuilder class can apply transformations, such as joins or filters, as
   well as compute aggregations like counts, sums, and standard deviations. See
   :class:`QueryBuilder` for a full list of supported transformations and
   aggregations.

   After each transformation, the QueryBuilder is modified and returned with that
   transformation applied. To re-use the transformations in a :class:`QueryBuilder`
   as the base for multiple queries, create a view using
   :func:`~tmlt.analytics.session.Session.create_view` and write queries on that
   view.

   At any point, a QueryBuilder instance can have a group by followed by an
   aggregation applied to it, yielding a
   :class:`~tmlt.analytics.query_expr.QueryExpr` object. This QueryExpr can then be
   passed to :func:`~tmlt.analytics.session.Session.evaluate` to obtain
   differentially private results to the query.









Data
====


.. py:data:: Row
   

   Type alias for a dictionary with string keys.



Classes
=======

.. list-table::

   * - :class:`.ColumnDescriptor`
     - Information about a column.
   * - :class:`.ColumnType`
     - The supported SQL92 column types for Analytics data.
   * - :class:`.QueryBuilder`
     - High-level interface for specifying DP queries.
   * - :class:`.GroupedQueryBuilder`
     - A QueryBuilder that is grouped by a set of columns and can be aggregated.

   
.. py:class:: ColumnDescriptor

   Information about a column.

   ColumnDescriptors have the following attributes:

   .. attribute:: column_type

      A :class:`ColumnType`, specifying what type this column has.

   .. attribute:: allow_null

      :class:`bool`. If `True`, this column allows null values.

   .. attribute:: allow_nan

      :class:`bool`. If `True`, this column allows NaN values.

   .. attribute:: allow_inf

      :class:`bool`. If `True`, this column allows infinite values.







   
.. py:class:: ColumnType

   Bases: :class:`enum.Enum`

   The supported SQL92 column types for Analytics data.





   .. py:attribute:: INTEGER
      

      Integer column type.

   .. py:attribute:: DECIMAL
      

      Floating-point column type.

   .. py:attribute:: VARCHAR
      

      String column type.

   .. py:attribute:: DATE
      

      Date column type.

   .. py:attribute:: TIMESTAMP
      

      Timestamp column type.


   .. py:method:: name(self)

      The name of the Enum member.


   .. py:method:: value(self)

      The value of the Enum member.



   
.. py:class:: QueryBuilder(source_id)

   High-level interface for specifying DP queries.

   Each instance corresponds to applying a transformation.
   The full graph of QueryBuilder objects can be traversed from root to a node.

   ..
       >>> from tmlt.analytics.privacy_budget import PureDPBudget
       >>> import tmlt.analytics.session
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> spark = SparkSession.builder.getOrCreate()
       >>> private_data = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
       ...     )
       ... )
       >>> budget = PureDPBudget(float("inf"))
       >>> sess = tmlt.analytics.session.Session.from_dataframe(
       ...     privacy_budget=budget,
       ...     source_id="my_private_data",
       ...     dataframe=private_data,
       ... )

   .. rubric:: Example

   >>> sess.private_sources
   ['my_private_data']
   >>> sess.get_schema("my_private_data").column_types
   {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
   >>> # Building a query
   >>> query = QueryBuilder("my_private_data").count()
   >>> # Answering the query with infinite privacy budget
   >>> answer = sess.evaluate(
   ...     query,
   ...     PureDPBudget(float("inf"))
   ... )
   >>> answer.toPandas()
      count
   0      3



   .. list-table:: Methods

      * - :meth:`.query_expr`
        - Returns the query_expr being built.
      * - :meth:`.join_public`
        - Updates the current query to join with a dataframe or public source.
      * - :meth:`.join_private`
        - Updates the current query to join with another :class:`QueryBuilder`.
      * - :meth:`.replace_null_and_nan`
        - Updates the current query to replace null and NaN values in some columns.
      * - :meth:`.replace_infinity`
        - Updates the current query to replace +inf and -inf values in some columns.
      * - :meth:`.drop_null_and_nan`
        - Updates the current query to drop rows containing null or NaN values.
      * - :meth:`.drop_infinity`
        - Updates the current query to drop rows containing infinite values.
      * - :meth:`.rename`
        - Updates the current query to rename the columns.
      * - :meth:`.filter`
        - Updates the current query to filter for rows matching a predicate.
      * - :meth:`.select`
        - Updates the current query to select certain columns.
      * - :meth:`.map`
        - Updates the current query to apply a mapping function to each row.
      * - :meth:`.flat_map`
        - Updates the current query to apply a flat map.
      * - :meth:`.bin_column`
        - Create a new column by assigning the values in a given column to bins.
      * - :meth:`.histogram`
        - Returns a count query containing the frequency of values in specified column.
      * - :meth:`.groupby`
        - Groups the query by the given set of keys, returning a GroupedQueryBuilder.
      * - :meth:`.count`
        - Returns a count query that is ready to be evaluated.
      * - :meth:`.count_distinct`
        - Returns a count_distinct query that is ready to be evaluated.
      * - :meth:`.quantile`
        - Returns a quantile query that is ready to be evaluated.
      * - :meth:`.min`
        - Returns a quantile query requesting a minimum value, ready to be evaluated.
      * - :meth:`.max`
        - Returns a quantile query requesting a maximum value, ready to be evaluated.
      * - :meth:`.median`
        - Returns a quantile query requesting a median value, ready to be evaluated.
      * - :meth:`.sum`
        - Returns a sum query that is ready to be evaluated.
      * - :meth:`.average`
        - Returns an average query that is ready to be evaluated.
      * - :meth:`.variance`
        - Returns a variance query that is ready to be evaluated.
      * - :meth:`.stdev`
        - Returns a standard deviation query that is ready to be evaluated.




   .. automethod:: __init__
   .. py:method:: query_expr(self)
      :property:

      Returns the query_expr being built.


   .. py:method:: join_public(self, public_table, join_columns = None)

      Updates the current query to join with a dataframe or public source.

      This operation performs a natural join between two tables. This means
      that the resulting table will contain all columns unique to each input
      table, along with one copy of each common column. In most cases, the
      columns have the same names they did in the input tables.

      By default, the input tables are joined on all common columns (i.e.,
      columns whose names and data types match). However if ``join_columns``
      is given, the tables will be joined only on the given columns, and the
      remaining common columns will be disambiguated in the resulting table by
      the addition of a ``_left`` or ``_right`` suffix to their names. If
      given, ``join_columns`` must contain a non-empty subset of the tables'
      common columns. For example, two tables with columns ``A,B,C`` and ``A,B,D``
      would by default be joined on columns ``A`` and ``B``, resulting in a
      table with columns ``A,B,C,D``; if ``join_columns=["B"]`` were given
      when performing this join, the resulting table would have columns
      ``A_left,A_right,B,C,D``. The order of columns in the resulting table is
      not guaranteed.

      Note that columns must share both names and data types for them to be used in
      joining. If this condition is not met, one of the data sources must be
      transformed to be eligible for joining (e.g., by using :func:`rename`
      or :func:`map`).

      Every row within a join group (i.e., every row that shares values in the join
      columns) from the private table will be joined with every row from that same
      group in the public table. For example, if a group has :math:`X` rows in the
      private table and :math:`Y` rows in the public table, then the output table
      will contain :math:`X*Y` rows for this group.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> public_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 0], ["0", 1], ["1", 1], ["1", 2]], columns=["A", "C"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> public_data.toPandas()
         A  C
      0  0  0
      1  0  1
      2  1  1
      3  1  2
      >>> # Create a query joining with public_data as a dataframe:
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .join_public(public_data)
      ...     .groupby(KeySet.from_dict({"C": [0, 1, 2]}))
      ...     .count()
      ... )
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("C").toPandas()
         C  count
      0  0      1
      1  1      3
      2  2      2
      >>> # Alternatively, the dataframe can be added to the Session as a public
      >>> # source, and its source ID can be used to perform the join:
      >>> sess.add_public_dataframe(
      ...     source_id="my_public_data", dataframe=public_data
      ... )
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .join_public("my_public_data")
      ...     .groupby(KeySet.from_dict({"C": [0, 1, 2]}))
      ...     .count()
      ... )
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("C").toPandas()
         C  count
      0  0      1
      1  1      3
      2  2      2

      :param public_table: A dataframe or source ID for a public source to natural join
                           with private data.
      :param join_columns: The columns to join on. If ``join_columns`` is not specified,
                           the tables will be joined on all common columns.


   .. py:method:: join_private(self, right_operand, truncation_strategy_left, truncation_strategy_right, join_columns = None)

      Updates the current query to join with another :class:`QueryBuilder`.

      This operation is a natural join, with the same behavior and
      requirements as :func:`join_public`. However, there is a key difference:
      before the join is performed, each table is *truncated* based on the
      corresponding
      :class:`~tmlt.analytics.truncation_strategy.TruncationStrategy`.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> from tmlt.analytics.query_builder import TruncationStrategy
      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> sess.create_view(
      ...     QueryBuilder("my_private_data")
      ...     .select(["A", "X"])
      ...     .rename({"X": "C"})
      ...     .query_expr,
      ...     source_id="my_private_view",
      ...     cache=False
      ... )
      >>> # A query where only one record with each join key is kept on the left
      >>> # table, but two are kept on the right table.
      >>> query_drop_excess = (
      ...     QueryBuilder("my_private_data")
      ...     .join_private(
      ...         QueryBuilder("my_private_view"),
      ...         truncation_strategy_left=TruncationStrategy.DropExcess(1),
      ...         truncation_strategy_right=TruncationStrategy.DropExcess(2),
      ...     )
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query_drop_excess,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas()
         count
      0      3
      >>> # A query where all records that share a join key with another record in
      >>> # their table are dropped, in both the left and right tables.
      >>> query_drop_non_unique = (
      ...     QueryBuilder("my_private_data")
      ...     .join_private(
      ...         QueryBuilder("my_private_view"),
      ...         truncation_strategy_left=TruncationStrategy.DropNonUnique(),
      ...         truncation_strategy_right=TruncationStrategy.DropNonUnique(),
      ...     )
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query_drop_non_unique,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas()
         count
      0      1

      :param right_operand: QueryBuilder object representing the table to be joined with.
                            When calling ``query_a.join_private(query_b, ...)``, we
                            refer to ``query_a`` as the *left table* and ``query_b`` as
                            the *right table*.
      :param truncation_strategy_left: Strategy for truncation of the left table.
      :param truncation_strategy_right: Strategy for truncation of the right table.
      :param join_columns: The columns to join on. If ``join_columns`` is not specified,
                           the tables will be joined on all common columns.


   .. py:method:: replace_null_and_nan(self, replace_with = None)

      Updates the current query to replace null and NaN values in some columns.

      Note: if null values are replaced in a column, then Analytics will raise
      an error if you use a KeySet with a null value for that column.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [[None, 0, 0.0], ["1", None, 1.1], ["2", 2, None]],
          ...         columns=["A", "B", "X"],
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'DECIMAL', 'X': 'DECIMAL'}
      >>> # Building a query with a replace_null_and_nan transformation
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .replace_null_and_nan(
      ...         replace_with={
      ...             "A": "new_value",
      ...             "B": 1234,
      ...             "X": 56.78,
      ...         },
      ...     )
      ...     .groupby(KeySet.from_dict({"A": ["new_value", "1", "2"]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
                 A  count
      0          1      1
      1          2      1
      2  new_value      1

      :param replace_with: A dictionary mapping column names to values used to
                           replace null and NaN values.
                           If None (or empty), all columns will have null and NaN
                           values replaced with Analytics defaults; see
                           :class:`tmlt.analytics.query_expr.AnalyticsDefault`.


   .. py:method:: replace_infinity(self, replace_with = None)

      Updates the current query to replace +inf and -inf values in some columns.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [
          ...             ["a1", 0, 0.0],
          ...             ["a1", None, float("-inf")],
          ...             ["a2", 2, float("inf")]
          ...         ],
          ...         columns=["A", "B", "X"],
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'DECIMAL', 'X': 'DECIMAL'}
      >>> # Building a query with a replace_null_and_nan transformation
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .replace_infinity(
      ...         replace_with={
      ...             "X": (-100, 100),
      ...         },
      ...     )
      ...     .groupby(KeySet.from_dict({"A": ["a1", "a2"]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
          A  count
      0  a1      2
      1  a2      1

      :param replace_with: A dictionary mapping column names to values used to
                           replace -inf and +inf.
                           If None (or empty), all columns will have infinite
                           values replaced with Analytics defaults; see
                           :class:`tmlt.analytics.query_expr.AnalyticsDefault`.


   .. py:method:: drop_null_and_nan(self, columns)

      Updates the current query to drop rows containing null or NaN values.

      Note: if null and NaN values are dropped from a column, then Analytics will
      raise an error if you use a KeySet that contains a null value for
      that column.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> from pyspark.sql.types import (
          ...     DoubleType,
          ...     LongType,
          ...     StringType,
          ...     StructField,
          ...     StructType,
          ... )
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     [["a1", 2, 0.0], ["a1", None, 1.1], ["a2", 2, None]],
          ...     schema=StructType([
          ...         StructField("A", StringType(), nullable=True),
          ...         StructField("B", LongType(), nullable=True),
          ...         StructField("X", DoubleType(), nullable=True),
          ...     ])
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'DECIMAL'}
      >>> # Count query on the original data
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["a1", "a2"], "B": [None, 2]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A", "B").toPandas()
          A    B  count
      0  a1  NaN      1
      1  a1  2.0      1
      2  a2  NaN      0
      3  a2  2.0      1

      >>> # Building a query with a  transformation
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .drop_null_and_nan(columns=["B"])
      ...     .groupby(KeySet.from_dict({"A": ["a1", "a2"]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
          A  count
      0  a1      1
      1  a2      1

      :param columns: A list of columns in which to look for invalid values.
                      If None (or empty), then *all* columns will be considered
                      (so if *any* column has an invalid value, then the row will
                      be dropped).


   .. py:method:: drop_infinity(self, columns)

      Updates the current query to drop rows containing infinite values.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> from pyspark.sql.types import (
          ...     DoubleType,
          ...     LongType,
          ...     StringType,
          ...     StructField,
          ...     StructType,
          ... )
          >>> spark = SparkSession.builder.getOrCreate()
          >>> my_private_data = spark.createDataFrame(
          ...     [["a1", 2, 0.0], ["a1", 1, 1.1], ["a2", 2, float("inf")]],
          ...     schema=StructType([
          ...         StructField("A", StringType(), nullable=True),
          ...         StructField("B", LongType(), nullable=True),
          ...         StructField("X", DoubleType(), nullable=True),
          ...     ])
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=my_private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> my_private_data.sort("A", "B", "X").toPandas()
          A  B    X
      0  a1  1  1.1
      1  a1  2  0.0
      2  a2  2  inf
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'DECIMAL'}
      >>> # Count query on the original data
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["a1", "a2"]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
          A  count
      0  a1      2
      1  a2      1

      >>> # Building a query with a drop_infinity transformation
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .drop_infinity(columns=["X"])
      ...     .groupby(KeySet.from_dict({"A": ["a1", "a2"]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
          A  count
      0  a1      2
      1  a2      0

      :param columns: A list of columns in which to look for invalid values.
                      If None (or empty), then *all* columns will be considered
                      (so if *any* column has an invalid value, then the row will
                      be dropped).


   .. py:method:: rename(self, column_mapper)

      Updates the current query to rename the columns.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a query with a rename transformation
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .rename({"X": "C"})
      ...     .groupby(KeySet.from_dict({"C": [0, 1]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("C").toPandas()
         C  count
      0  0      1
      1  1      2

      :param column_mapper: A mapping of columns to new column names.
                            Columns not specified in the mapper will remain the same.


   .. py:method:: filter(self, predicate)

      Updates the current query to filter for rows matching a predicate.

      The ``predicate`` parameter accepts the same syntax as in PySpark's
      :meth:`~pyspark.sql.DataFrame.filter` method: valid expressions are
      those that can be used in a `WHERE clause
      <https://spark.apache.org/docs/latest/sql-ref-syntax-qry-select-where.html>`__
      in Spark SQL. Examples of valid predicates include:

      * ``age < 42``
      * ``age BETWEEN 17 AND 42``
      * ``age < 42 OR (age < 60 AND gender IS NULL)``
      * ``LENGTH(name) > 17``
      * ``favorite_color IN ('blue', 'red')``
      * ``date = '2022-03-14'``
      * ``time < '2022-01-01T12:45:00'``

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a query with a filter transformation
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .filter("A == '0'")
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas()
         count
      0      1

      :param predicate: A string of SQL expressions specifying the filter to apply to the
                        data. For example, the string "A > B" matches rows where column A is
                        greater than column B.


   .. py:method:: select(self, columns)

      Updates the current query to select certain columns.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> # Typeguard doesn't like implicit doctest imports
          >>> from tmlt.analytics.query_builder import QueryBuilder
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Create a new view using a select query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .select(["A", "B"])
      ... )
      >>> sess.create_view(query, "selected_data", cache=True)
      >>> # Inspect the schema of the resulting view
      >>> sess.get_schema("selected_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER'}

      :param columns: The columns to select.


   .. py:method:: map(self, f, new_column_types, augment = False)

      Updates the current query to apply a mapping function to each row.

      If you provide only a ColumnType for the new column types, Analytics
      assumes that all new columns created may contain null values (and that
      DECIMAL columns may contain NaN or infinite values).

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a query with a map transformation
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .map(
      ...         lambda row: {"new": row["B"]*2},
      ...         new_column_types={"new": 'INTEGER'},
      ...         augment=True
      ...     )
      ...     .groupby(KeySet.from_dict({"new": [0, 1, 2, 3, 4]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("new").toPandas()
         new  count
      0    0      1
      1    1      0
      2    2      1
      3    3      0
      4    4      1

      :param f: The function to be applied to each row.
                The function's input is a dictionary matching each column name to
                its value for that row.
                This function should return a dictionary, which should always
                have the same keys regardless of input, and the values in that
                dictionary should match the column type specified in
                `new_column_types`. The function should not have any side effects
                (in particular, f cannot raise exceptions).
      :param new_column_types: Mapping from column names to types, for new columns
                               produced by f. Using
                               :class:`tmlt.analytics.query_builder.ColumnDescriptor`
                               is preferred.
      :param augment: If True, add new columns to the existing dataframe (so new
                      schema = old schema + schema_new_columns).
                      If False, make the new dataframe with schema = schema_new_columns


   .. py:method:: flat_map(self, f, max_num_rows, new_column_types, augment = False, grouping = False)

      Updates the current query to apply a flat map.

      If you provide only a ColumnType for the new column types, Analytics
      assumes that all new columns created may contain null values (and that
      DECIMAL columns may contain NaN or infinite values).

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> from tmlt.analytics.keyset import KeySet
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1], ["1", 3, 1]],
          ...         columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a query with a flat map transformation
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .flat_map(
      ...         lambda row: [{"i_B": i} for i in range(int(row["B"])+1)],
      ...         max_num_rows=3,
      ...         new_column_types={"i_B": ColumnDescriptor(
      ...             ColumnType.INTEGER,
      ...             allow_null=False,
      ...         )},
      ...         augment=True,
      ...         grouping=False
      ...     )
      ...     .groupby(KeySet.from_dict({"B": [0, 1, 2, 3]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("B").toPandas()
         B  count
      0  0      1
      1  1      2
      2  2      3
      3  3      3

      :param f: The function to be applied to each row.
                The function's input is a dictionary matching a column name to
                its value for that row.
                This function should return a list of dictionaries.
                Those dictionaries should always
                have the same keys regardless of input, and the values in those
                dictionaries should match the column type specified in
                `new_column_types`. The function should not have any side effects
                (in particular, f cannot raise exceptions).
      :param max_num_rows: The enforced limit on the number of rows from each f(row).
                           If f produces more rows than this, only the first `max_num_rows`
                           rows will be in the output.
      :param new_column_types: Mapping from column names to types, for new columns
                               produced by f. Using
                               :class:`tmlt.analytics.query_builder.ColumnDescriptor`
                               is preferred.
      :param augment: If True, add new columns to the existing dataframe (so new
                      schema = old schema + schema_new_columns).
                      If False, make the new dataframe with schema = schema_new_columns
      :param grouping: Whether this produces a new column that we want to groupby.
                       If True, this requires that any groupby aggregations following this
                       query include the new column as a groupby column. Only one new column
                       is supported, and the new column must have distinct values for each
                       input row.


   .. py:method:: bin_column(self, column, spec, name = None)

      Create a new column by assigning the values in a given column to bins.

      ..
          >>> from tmlt.analytics.query_builder import QueryBuilder
          >>> from tmlt.analytics.session import Session
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> from tmlt.analytics.keyset import KeySet
          >>> from pyspark.sql import SparkSession
          >>> import pandas as pd
          >>> spark = SparkSession.builder.getOrCreate()

      .. rubric:: Example

      >>> from tmlt.analytics.binning_spec import BinningSpec
      >>> private_data = spark.createDataFrame(
      ...     pd.DataFrame(
      ...         {
      ...             "age": [11, 17, 30, 18, 59, 48, 76, 91, 48, 53],
      ...             "income": [0, 6, 54, 14, 126, 163, 151, 18, 97, 85],
      ...         }
      ...     )
      ... )
      >>> sess = Session.from_dataframe(
      ...     PureDPBudget(float("inf")), "private_data", private_data
      ... )
      >>> age_binspec = BinningSpec(
      ...     [0, 18, 65, 100], include_both_endpoints=False
      ... )
      >>> income_tax_rate_binspec = BinningSpec(
      ...     [0, 10, 40, 86, 165], names=[10, 12, 22, 24]
      ... )
      >>> keys = KeySet.from_dict(
      ...     {
      ...         "age_binned": age_binspec.bins(),
      ...         "marginal_tax_rate": income_tax_rate_binspec.bins()
      ...     }
      ... )
      >>> query = (
      ...     QueryBuilder("private_data")
      ...     .bin_column("age", age_binspec)
      ...     .bin_column(
      ...         "income", income_tax_rate_binspec, name="marginal_tax_rate"
      ...     )
      ...     .groupby(keys).count()
      ... )
      >>> answer = sess.evaluate(query, PureDPBudget(float("inf")))
      >>> answer.sort("age_binned", "marginal_tax_rate").toPandas()
         age_binned  marginal_tax_rate  count
      0     (0, 18]                 10      2
      1     (0, 18]                 12      1
      2     (0, 18]                 22      0
      3     (0, 18]                 24      0
      4    (18, 65]                 10      0
      5    (18, 65]                 12      0
      6    (18, 65]                 22      2
      7    (18, 65]                 24      3
      8   (65, 100]                 10      0
      9   (65, 100]                 12      1
      10  (65, 100]                 22      0
      11  (65, 100]                 24      1

      :param column: Name of the column used to assign bins.
      :param spec: A :class:`~tmlt.analytics.binning_spec.BinningSpec` that defines the
                   binning operation to be performed.
      :param name: The name of the column that will be created. If None (the default),
                   the input column name with ``_binned`` appended to it.


   .. py:method:: histogram(self, column, bin_edges, name = None)

      Returns a count query containing the frequency of values in specified column.

      ..
          >>> from tmlt.analytics.query_builder import QueryBuilder
          >>> from tmlt.analytics.session import Session
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> from tmlt.analytics.keyset import KeySet
          >>> from pyspark.sql import SparkSession
          >>> import pandas as pd
          >>> spark = SparkSession.builder.getOrCreate()

      .. rubric:: Example

      >>> from tmlt.analytics.binning_spec import BinningSpec
      >>> private_data = spark.createDataFrame(
      ...     pd.DataFrame(
      ...         {
      ...          "income_thousands": [83, 85, 86, 73, 82, 95,
      ...                               74, 92, 71, 86, 97]
      ...         }
      ...     )
      ... )
      >>> session = Session.from_dataframe(
      ...     privacy_budget=PureDPBudget(epsilon=float('inf')),
      ...     source_id="private_data",
      ...     dataframe=private_data,
      ... )
      >>> income_binspec = BinningSpec(
      ...     bin_edges=[i for i in range(70,110,10)],
      ...     include_both_endpoints=False
      ... )
      >>> binned_income_count_query = (
      ...     QueryBuilder("private_data")
      ...     .histogram("income_thousands", income_binspec, "income_binned")
      ... )
      >>> binned_income_counts = session.evaluate(
      ...     binned_income_count_query,
      ...     privacy_budget=PureDPBudget(epsilon=10),
      ... )
      >>> print(binned_income_counts.sort("income_binned").toPandas())
        income_binned  count
      0      (70, 80]      3
      1      (80, 90]      5
      2     (90, 100]      3

      :param column: Name of the column used to assign bins.
      :param bin_edges: The bin edges for the histogram; provided as either a
                        :class:`~tmlt.analytics.binning_spec.BinningSpec` or as a list of
                        :data:`supported data types
                        <tmlt.analytics.session.SUPPORTED_SPARK_TYPES>`.
                        Values outside the range of the provided bins, ``None`` types,
                        and NaN values are all mapped to ``None`` (``null`` in Spark).
      :param name: The name of the column that will be created. If None (the default),
                   the input column name with ``_binned`` appended to it.


   .. py:method:: groupby(self, keys)

      Groups the query by the given set of keys, returning a GroupedQueryBuilder.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Examples

      >>> from tmlt.analytics.keyset import KeySet
      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}

      Answering a query with the exact groupby domain:
          >>> groupby_keys = KeySet.from_dict({"A": ["0", "1"]})
          >>> query = (
          ...     QueryBuilder("my_private_data")
          ...     .groupby(groupby_keys)
          ...     .count()
          ... )
          >>> answer = sess.evaluate(
          ...     query,
          ...     PureDPBudget(float("inf"))
          ... )
          >>> answer.sort("A").toPandas()
             A  count
          0  0      1
          1  1      2

      Answering a query with an omitted domain value:
          >>> groupby_keys = KeySet.from_dict({"A": ["0"]})
          >>> query = (
          ...     QueryBuilder("my_private_data")
          ...     .groupby(groupby_keys)
          ...     .count()
          ... )
          >>> answer = sess.evaluate(
          ...     query,
          ...     PureDPBudget(float("inf"))
          ... )
          >>> answer.toPandas()
             A  count
          0  0      1

      Answering a query with an added domain value:
          >>> groupby_keys = KeySet.from_dict({"A": ["0", "1", "2"]})
          >>> query = (
          ...     QueryBuilder("my_private_data")
          ...     .groupby(groupby_keys)
          ...     .count()
          ... )
          >>> answer = sess.evaluate(
          ...     query,
          ...     PureDPBudget(float("inf"))
          ... )
          >>> answer.sort("A").toPandas()
             A  count
          0  0      1
          1  1      2
          2  2      0

      Answering a query with a multi-column domain:
          >>> groupby_keys = KeySet.from_dict(
          ...    {"A": ["0", "1"], "B": [0, 1, 2]}
          ... )
          >>> query = (
          ...     QueryBuilder("my_private_data")
          ...     .groupby(groupby_keys)
          ...     .count()
          ... )
          >>> answer = sess.evaluate(
          ...     query,
          ...     PureDPBudget(float("inf"))
          ... )
          >>> answer.sort("A", "B").toPandas()
             A  B  count
          0  0  0      0
          1  0  1      1
          2  0  2      0
          3  1  0      1
          4  1  1      0
          5  1  2      1

      Answering a query with a multi-column domain and structural zeros:
          >>> # Suppose it is known that A and B cannot be equal. This set of
          >>> # groupby keys prevents those impossible values from being computed.
          >>> keys_df = pd.DataFrame({
          ...     "A": ["0", "0", "1", "1"],
          ...     "B": [1, 2, 0, 2],
          ... })
          >>> groupby_keys = KeySet.from_dataframe(spark.createDataFrame(keys_df))
          >>> query = (
          ...     QueryBuilder("my_private_data")
          ...     .groupby(groupby_keys)
          ...     .count()
          ... )
          >>> answer = sess.evaluate(
          ...     query,
          ...     PureDPBudget(float("inf"))
          ... )
          >>> answer.sort("A", "B").toPandas()
             A  B  count
          0  0  1      1
          1  0  2      0
          2  1  0      1
          3  1  2      1

      :param keys: A KeySet giving the set of groupby keys to be used when
                   performing an aggregation.


   .. py:method:: count(self, name = None, mechanism = CountMechanism.DEFAULT)

      Returns a count query that is ready to be evaluated.

      Note that differentially-private counts may return values that are not
      possible for a non-DP query - including negative values. You can enforce
      non-negativity once the query returns its results; see the example below.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a count query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas()
         count
      0      3
      >>> # Ensuring all results are non-negative
      >>> import pyspark.sql.functions as sf
      >>> answer = answer.withColumn(
      ...     "count", sf.when(sf.col("count") < 0, 0).otherwise(
      ...             sf.col("count")
      ...     )
      ... )
      >>> answer.toPandas()
         count
      0      3

      :param name: Name for the resulting aggregation column. Defaults to "count".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: count_distinct(self, cols = None, name = None, mechanism = CountDistinctMechanism.DEFAULT)

      Returns a count_distinct query that is ready to be evaluated.

      Note that differentially-private counts may returns values that are not
      possible for a non-DP query - including negative values. You can enforce
      non-negativity once the query returns its results; see the example below.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["0", 1, 0], ["1", 0, 1], ["1", 2, 1]],
          ...         columns=["A", "B", "X"],
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a count_distinct query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .count_distinct()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas()
         count_distinct
      0               3
      >>> # Ensuring all results are non-negative
      >>> import pyspark.sql.functions as sf
      >>> answer = answer.withColumn(
      ...     "count_distinct", sf.when(
      ...         sf.col("count_distinct") < 0, 0
      ...     ).otherwise(
      ...         sf.col("count_distinct")
      ...     )
      ... )
      >>> answer.toPandas()
         count_distinct
      0               3

      :param cols: Columns in which to count distinct values. If none are provided,
                   the query will count every distinct row.
      :param name: Name for the resulting aggregation column. Defaults to
                   "count_distinct" if no columns are provided, or
                   "count_distinct(A, B, C)" if the provided columns are A, B, and C.
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: quantile(self, column, quantile, low, high, name = None)

      Returns a quantile query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.


      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )
          >>> import doctest
          >>> doctest.ELLIPSIS_MARKER = '1.331107'

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a quantile query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .quantile(column="B", quantile=0.6, low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas() # doctest: +ELLIPSIS
         B_quantile(0.6)
      0         1.331107

      :param column: The column to compute the quantile over.
      :param quantile: A number between 0 and 1 specifying the quantile to compute.
                       For example, 0.5 would compute the median.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_quantile({quantile})".


   .. py:method:: min(self, column, low, high, name = None)

      Returns a quantile query requesting a minimum value, ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )
          >>> import doctest
          >>> doctest.ELLIPSIS_MARKER = '0.213415'

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a quantile query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .min(column="B", low=0, high=5, name="min_B")
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas() # doctest: +ELLIPSIS, +NORMALIZE_WHITESPACE
            min_B
      0  0.213415

      :param column: The column to compute the quantile over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_min".


   .. py:method:: max(self, column, low, high, name = None)

      Returns a quantile query requesting a maximum value, ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )
          >>> import doctest
          >>> doctest.ELLIPSIS_MARKER='2.331871'

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a quantile query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .max(column="B", low=0, high=5, name="max_B")
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas() # doctest: +ELLIPSIS, +NORMALIZE_WHITESPACE
            max_B
      0  2.331871

      :param column: The column to compute the quantile over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_max".


   .. py:method:: median(self, column, low, high, name = None)

      Returns a quantile query requesting a median value, ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )
          >>> import doctest
          >>> doctest.ELLIPSIS_MARKER='1.221197'

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a quantile query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .median(column="B", low=0, high=5, name="median_B")
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas() # doctest: +ELLIPSIS, +NORMALIZE_WHITESPACE
         median_B
      0  1.221197

      :param column: The column to compute the quantile over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_median".


   .. py:method:: sum(self, column, low, high, name = None, mechanism = SumMechanism.DEFAULT)

      Returns a sum query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      .. note::

         Regarding the clamping params:
         
         #. The values for `low` and `high` are a choice the caller must make.
         #. All data will be clamped to lie within this range.
         #. The narrower the range, the less noise. Larger bounds mean more data                 is kept, but more noise needs to be added to the result.
         #. The clamping bounds are assumed to be public information. Avoid using                 the private data to set these values.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a sum query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .sum(column="B",low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas()
         B_sum
      0      3

      :param column: The column to compute the sum over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_sum".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: average(self, column, low, high, name = None, mechanism = AverageMechanism.DEFAULT)

      Returns an average query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      .. note::

         Regarding the clamping params:
         
         #. The values for `low` and `high` are a choice the caller must make.
         #. All data will be clamped to lie within this range.
         #. The narrower the range, the less noise. Larger bounds mean more data                 is kept, but more noise needs to be added to the result.
         #. The clamping bounds are assumed to be public information. Avoid using                 the private data to set these values.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building an average query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .average(column="B",low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas()
         B_average
      0        1.0

      :param column: The column to compute the average over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_average".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: variance(self, column, low, high, name = None, mechanism = VarianceMechanism.DEFAULT)

      Returns a variance query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      .. note::

         Regarding the clamping params:
         
         #. The values for `low` and `high` are a choice the caller must make.
         #. All data will be clamped to lie within this range.
         #. The narrower the range, the less noise. Larger bounds mean more data                 is kept, but more noise needs to be added to the result.
         #. The clamping bounds are assumed to be public information. Avoid using                 the private data to set these values.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a variance query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .variance(column="B",low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas()
         B_variance
      0    0.666667

      :param column: The column to compute the variance over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_variance".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: stdev(self, column, low, high, name = None, mechanism = StdevMechanism.DEFAULT)

      Returns a standard deviation query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      .. note::

         Regarding the clamping params:
         
         #. The values for `low` and `high` are a choice the caller must make.
         #. All data will be clamped to lie within this range.
         #. The narrower the range, the less noise. Larger bounds mean more data                 is kept, but more noise needs to be added to the result.
         #. The clamping bounds are assumed to be public information. Avoid using                 the private data to set these values.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a standard deviation query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .stdev(column="B",low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.toPandas()
          B_stdev
      0  0.816497

      :param column: The column to compute the stdev over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_stdev".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.



   
.. py:class:: GroupedQueryBuilder(source_id, query_expr, groupby_keys)

   A QueryBuilder that is grouped by a set of columns and can be aggregated.






   .. automethod:: __init__
   .. py:method:: count(self, name = None, mechanism = CountMechanism.DEFAULT)

      Returns a count query that is ready to be evaluated.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a groupby count query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .count()
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
         A  count
      0  0      1
      1  1      2

      :param name: Name for the resulting aggregation column. Defaults to "count".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: count_distinct(self, cols = None, name = None, mechanism = CountDistinctMechanism.DEFAULT)

      Returns a count_distinct query that is ready to be evaluated.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["0", 1, 0], ["1", 0, 1], ["1", 2, 1]],
          ...         columns=["A", "B", "X"],
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a groupby count_distinct query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .count_distinct(["B", "X"])
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
         A  count_distinct(B, X)
      0  0                     1
      1  1                     2

      :param cols: Columns in which to count distinct values. If none are provided,
                   the query will count every distinct row.
      :param name: Name for the resulting aggregation column. Defaults to
                   "count_distinct" if no columns are provided, or
                   "count_distinct(A, B, C)" if the provided columns are A, B, and C.
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: quantile(self, column, quantile, low, high, name = None)

      Returns a quantile query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )
          >>> import doctest
          >>> doctest.ELLIPSIS_MARKER = '1.331107'

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a groupby quantile query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .quantile(column="B", quantile=0.6, low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas() # doctest: +ELLIPSIS
         A  B_quantile(0.6)
      0  0         1.331107
      1  1         1.331107

      :param column: The column to compute the quantile over.
      :param quantile: A number between 0 and 1 specifying the quantile to compute.
                       For example, 0.5 would compute the median.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_quantile({quantile})".


   .. py:method:: min(self, column, low, high, name = None)

      Returns a quantile query requesting a minimum value, ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )
          >>> import doctest
          >>> doctest.ELLIPSIS_MARKER = '0.213415'

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a quantile query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .min(column="B", low=0, high=5, name="min_B")
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas() # doctest: +ELLIPSIS, +NORMALIZE_WHITESPACE
         A     min_B
      0  0  0.213415
      1  1  0.213415

      ..
          >>> # Reset the ellipsis marker
          >>> doctest.ELLIPSIS_MARKER = '...'

      :param column: The column to compute the quantile over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_min".


   .. py:method:: max(self, column, low, high, name = None)

      Returns a quantile query requesting a maximum value, ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )
          >>> import doctest
          >>> doctest.ELLIPSIS_MARKER='2.331871'

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a quantile query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .max(column="B", low=0, high=5, name="max_B")
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas() # doctest: +ELLIPSIS, +NORMALIZE_WHITESPACE
         A     max_B
      0  0  2.331871
      1  1  2.331871

      ..
          >>> # Reset the ellipsis marker
          >>> doctest.ELLIPSIS_MARKER = '...'

      :param column: The column to compute the quantile over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_max".


   .. py:method:: median(self, column, low, high, name = None)

      Returns a quantile query requesting a median value, ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )
          >>> import doctest
          >>> doctest.ELLIPSIS_MARKER='1.221197'

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a quantile query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .median(column="B", low=0, high=5, name="median_B")
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas() # doctest: +ELLIPSIS, +NORMALIZE_WHITESPACE
         A  median_B
      0  0  1.221197
      1  1  1.221197

      :param column: The column to compute the quantile over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_median".


   .. py:method:: sum(self, column, low, high, name = None, mechanism = SumMechanism.DEFAULT)

      Returns a sum query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      .. note::

         Regarding the clamping params:
         
         #. The values for `low` and `high` are a choice the caller must make.
         #. All data will be clamped to lie within this range.
         #. The narrower the range, the less noise. Larger bounds mean more data                 is kept, but more noise needs to be added to the result.
         #. The clamping bounds are assumed to be public information. Avoid using                 the private data to set these values.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a groupby sum query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .sum(column="B",low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
         A  B_sum
      0  0      1
      1  1      2

      :param column: The column to compute the sum over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_sum".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: average(self, column, low, high, name = None, mechanism = AverageMechanism.DEFAULT)

      Returns an average query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      .. note::

         Regarding the clamping params:
         
         #. The values for `low` and `high` are a choice the caller must make.
         #. All data will be clamped to lie within this range.
         #. The narrower the range, the less noise. Larger bounds mean more data                 is kept, but more noise needs to be added to the result.
         #. The clamping bounds are assumed to be public information. Avoid using                 the private data to set these values.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a groupby average query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .average(column="B",low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
         A  B_average
      0  0        1.0
      1  1        1.0

      :param column: The column to compute the average over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_average".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: variance(self, column, low, high, name = None, mechanism = VarianceMechanism.DEFAULT)

      Returns a variance query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      .. note::

         Regarding the clamping params:
         
         #. The values for `low` and `high` are a choice the caller must make.
         #. All data will be clamped to lie within this range.
         #. The narrower the range, the less noise. Larger bounds mean more data                 is kept, but more noise needs to be added to the result.
         #. The clamping bounds are assumed to be public information. Avoid using                 the private data to set these values.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a groupby variance query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .variance(column="B",low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
         A  B_variance
      0  0         1.0
      1  1         1.0

      :param column: The column to compute the variance over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_variance".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.


   .. py:method:: stdev(self, column, low, high, name = None, mechanism = StdevMechanism.DEFAULT)

      Returns a standard deviation query that is ready to be evaluated.

      Note that if the column being measured contains NaN or null values,
      a `drop_null_and_nan` query will be performed first. If the column being
      measured contains infinite values, a `drop_infinity` query will be
      performed first.

      .. note::

         Regarding the clamping params:
         
         #. The values for `low` and `high` are a choice the caller must make.
         #. All data will be clamped to lie within this range.
         #. The narrower the range, the less noise. Larger bounds mean more data                 is kept, but more noise needs to be added to the result.
         #. The clamping bounds are assumed to be public information. Avoid using                 the private data to set these values.

      ..
          >>> from tmlt.analytics.privacy_budget import PureDPBudget
          >>> import tmlt.analytics.session
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> budget = PureDPBudget(float("inf"))
          >>> sess = tmlt.analytics.session.Session.from_dataframe(
          ...     privacy_budget=budget,
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> # Building a groupby standard deviation query
      >>> query = (
      ...     QueryBuilder("my_private_data")
      ...     .groupby(KeySet.from_dict({"A": ["0", "1"]}))
      ...     .stdev(column="B",low=0, high=2)
      ... )
      >>> # Answering the query with infinite privacy budget
      >>> answer = sess.evaluate(
      ...     query,
      ...     PureDPBudget(float("inf"))
      ... )
      >>> answer.sort("A").toPandas()
         A  B_stdev
      0  0      1.0
      1  1      1.0

      :param column: The column to compute the stdev over.
      :param low: The lower bound for clamping.
      :param high: The upper bound for clamping. Must be such that `low` < `high`.
      :param name: The name to give the resulting aggregation column. Defaults to
                   f"{column}_stdev".
      :param mechanism: Choice of noise mechanism. By DEFAULT, the framework
                        automatically selects an appropriate mechanism.






